--- a/attestations/cnf/FIDO2/openssl_cert_nanos.cnf
+++ b/attestations/cnf/FIDO2/openssl_cert_nanos.cnf
@@ -9,5 +9,7 @@ OU = Authenticator Attestation
 CN = Ledger Nano-S FIDO 2 Attestation Batch 1  
 
 [v3_req]
+subjectKeyIdentifier = none
+authorityKeyIdentifier = none
 1.3.6.1.4.1.45724.1.1.4=ASN1:FORMAT:HEX,OCTETSTRING:341e4da93c2e81035a9faad887135200
 basicConstraints=critical,CA:FALSE
