--- a/attestations/cnf/FIDO2/openssl_cert_nanosp.cnf
+++ b/attestations/cnf/FIDO2/openssl_cert_nanosp.cnf
@@ -9,5 +9,7 @@ OU = Authenticator Attestation
 CN = Ledger Nano-SP FIDO 2 Attestation Batch 1
 
 [v3_req]
+subjectKeyIdentifier = none
+authorityKeyIdentifier = none
 1.3.6.1.4.1.45724.1.1.4=ASN1:FORMAT:HEX,OCTETSTRING:58b44d0b0a7cf33afd48f7153c871352
 basicConstraints=critical,CA:FALSE
