--- a/attestations/cnf/FIDO2/openssl_cert_nanox.cnf
+++ b/attestations/cnf/FIDO2/openssl_cert_nanox.cnf
@@ -9,5 +9,7 @@ OU = Authenticator Attestation
 CN = Ledger Nano-X FIDO 2 Attestation Batch 1  
 
 [v3_req]
+subjectKeyIdentifier = none
+authorityKeyIdentifier = none
 1.3.6.1.4.1.45724.1.1.4=ASN1:FORMAT:HEX,OCTETSTRING:fcb1bcb4f370078c6993bc24d0ae3fbe
 basicConstraints=critical,CA:FALSE
