--- a/attestations/cnf/U2F/openssl_cert_stax.cnf
+++ b/attestations/cnf/U2F/openssl_cert_stax.cnf
@@ -9,4 +9,6 @@ OU = Authenticator Attestation
 CN = Ledger Stax FIDO 1 Attestation Batch 1
 
 [v3_req]
+subjectKeyIdentifier = none
+authorityKeyIdentifier = none
 1.3.6.1.4.1.45724.2.1.1=DER:03:02:05:20 # USB
