--- a/attestations/cnf/U2F/openssl_cert_flex.cnf
+++ b/attestations/cnf/U2F/openssl_cert_flex.cnf
@@ -11,4 +11,4 @@ CN = Ledger Flex FIDO 1 Attestation Batch 1
 [v3_req]
 subjectKeyIdentifier = none
 authorityKeyIdentifier = none
-1.3.6.1.4.1.45724.2.1.1=DER:03:02:05:20 # USB
+1.3.6.1.4.1.45724.2.1.1=DER:03:02:04:30 # USB + NFC
