--- a/.github/workflows/lint-workflow.yml
+++ b/.github/workflows/lint-workflow.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Lint C code
-        run: clang-format --dry-run --Werror include/* src/* cbor-src/*
+        run: find src/ include/ cbor-src/ -iname "*.c" -or -iname "*.h" | xargs clang-format --dry-run -Werror
 
   job_lint_python:
     name: Lint Python code
