--- a/.github/workflows/build_and_functional_tests.yml
+++ b/.github/workflows/build_and_functional_tests.yml
@@ -42,7 +42,7 @@ jobs:
 
   tests_hid:
     needs: build_application
-    name: Ragger fast tests
+    name: Ragger HID tests
     uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@v1
     with:
       download_app_binaries_artifact: compiled_app_binaries
