--- a/.github/workflows/build_and_functional_tests.yml
+++ b/.github/workflows/build_and_functional_tests.yml
@@ -48,3 +48,14 @@ jobs:
       download_app_binaries_artifact: compiled_app_binaries
       run_for_devices: '["nanox"]'
       test_options: '--transport HID'
+
+  tests_okta:
+    needs: build_application
+    name: Ragger OKTA tests
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@v1
+    with:
+      download_app_binaries_artifact: compiled_app_binaries
+      run_for_devices: '["flex"]'
+      test_options: '--okta'
+    secrets:
+      secret_test_options: '--okta-token "${{ secrets.OKTA_TEST_TOKEN }}" --okta-email "${{ secrets.OKTA_TEST_EMAIL }}" --okta-url "${{ secrets.OKTA_TEST_URL }}"'
