--- a/.github/workflows/build_and_functional_tests.yml
+++ b/.github/workflows/build_and_functional_tests.yml
@@ -20,21 +20,21 @@ on:
 jobs:
   build_application:
     name: Build application using the reusable workflow
-    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_build.yml@v1
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_build.yml@debian
     with:
       upload_app_binaries_artifact: compiled_app_binaries
 
   tests:
     needs: build_application
     name: Ragger tests
-    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@v1
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@debian
     with:
       download_app_binaries_artifact: compiled_app_binaries
 
   tests_nfc:
     needs: build_application
     name: Ragger NFC tests
-    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@v1
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@debian
     with:
       download_app_binaries_artifact: compiled_app_binaries
       run_for_devices: '["stax", "flex"]'
@@ -43,7 +43,7 @@ jobs:
   tests_hid:
     needs: build_application
     name: Ragger HID tests
-    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@v1
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@debian
     with:
       download_app_binaries_artifact: compiled_app_binaries
       run_for_devices: '["nanox"]'
