--- a/.github/workflows/build_and_functional_tests.yml
+++ b/.github/workflows/build_and_functional_tests.yml
@@ -24,12 +24,27 @@ jobs:
     with:
       upload_app_binaries_artifact: compiled_app_binaries
 
+  build_application_rk_ui:
+    name: Build application using the reusable workflow with ENABLE_RK_CONFIG_UI_SETTING
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_build.yml@v1
+    with:
+      upload_app_binaries_artifact: compiled_app_binaries_rk_ui
+      flags: 'ENABLE_RK_CONFIG_UI_SETTING=1'
+
   tests:
     needs: build_application
     name: Ragger tests
     uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@v1
     with:
       download_app_binaries_artifact: compiled_app_binaries
+
+  tests_rk:
+    needs: build_application_rk_ui
+    name: Ragger tests with ENABLE_RK_CONFIG_UI_SETTING
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@v1
+    with:
+      download_app_binaries_artifact: compiled_app_binaries_rk_ui
+      test_options: '--rk-config-ui'
 
   tests_nfc:
     needs: build_application
