[ci][clean] Cancel previous workflows on a reference (branch, tag, ...) when it is updated

--- a/.github/workflows/lint-workflow.yml
+++ b/.github/workflows/lint-workflow.yml
@@ -3,6 +3,10 @@ name: Code style check
 on:
   workflow_dispatch:
   pull_request:
+# Cancel previous runs on this reference
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   job_lint_C:
