--- a/.github/workflows/misspellings_checks.yml
+++ b/.github/workflows/misspellings_checks.yml
@@ -12,6 +12,10 @@ on:
       - main
       - develop
   pull_request:
+# Cancel previous runs on this reference
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   misspell:
